--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
   --primary-bcg-color:#ffffff;
   --card-bcg-color: #ffffff;
   --btn-bcg-color: #f5f4fA;
+  --icon-primary-color: #afb1b8;
+  --icon-secondary-color: #ffffff;
   --section-padding-size: 94px;
   --card-set-gap: 30px;
   --card-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -60,9 +62,11 @@ img {
   cursor: pointer;
 }
 .btn:hover,
-.btn:hover {
+.btn:focus {
   color: var(--text-color-light);
   background-color: var(--accent-color);
+  outline: none;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .visually-hidden {
@@ -116,6 +120,10 @@ img {
   color: var(--accent-color)
 }
 
+.logo:focus {
+  outline: none;
+}
+
 .header .accent {
     color: var(--title-text-color);
 }
@@ -140,16 +148,20 @@ img {
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   }
+
 .nav-link.current {
   color: var(--accent-color);
 }
+
 .nav-link:hover,
 .nav-link:focus {
   color: var(--accent-color);
+  outline: none;
 }
 .nav-link.current:hover,
 .nav-link.current:focus {
   color: var(--title-text-color);
+  outline: none;
 }
 
 /* Contacts */
@@ -163,23 +175,40 @@ img {
 }
 
 .contact-link {
-  display: block;
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
+  align-items: center;
+  justify-content: center;
 
   font-weight: 500;
   line-height: 1.14;
   color: var(--primary-text-color);
   }
+
 .contact-link:hover,
 .contact-link:focus {
   color: var(--accent-color);
+  outline: none;
+}
+
+.contact-icon {
+  margin-right: 10px;
+  fill: currentColor;
 }
 
 /* Hero */
 
 .hero {
   background-color: #2F303A;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/herobg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+
   letter-spacing: 0.06em;
   text-align: center;
   padding-top: 200px;
@@ -208,6 +237,7 @@ img {
 .hero .btn:hover,
 .hero .btn:focus {
   background-color: #188ce8;
+  outline: none;
 }
 
 /* Section */
@@ -235,6 +265,16 @@ img {
   flex-basis: calc(100% / 4 - var(--card-set-gap));
   margin-left: var(--card-set-gap);
   margin-top: var(--card-set-gap);
+}
+
+.benefits-decor{
+  display: flex;
+  background: #F5F4FA;
+  border-radius: 4px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  margin-bottom: 30px;
+  justify-content: center;
 }
 
 .benefits-title {
@@ -277,7 +317,7 @@ img {
   background-color: #f5f4fA;
 }
 
-.team .list {
+.team-list {
   display: flex;
   margin-top: calc(-1 * var(--card-set-gap));
   margin-left: calc(-1 * var(--card-set-gap));
@@ -311,6 +351,81 @@ img {
 .team-text {
   font-size: 16px;
   line-height: 1.19;
+  margin-bottom: 16px;
+}
+
+.team-soc-list {
+  display: flex;
+  justify-content: center;
+}
+
+.team-soc-item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+
+.team-soc-item:last-child {
+  margin-right: 0;
+}
+
+.team-soc-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  color: var(--icon-primary-color);
+}
+
+.team-soc-link:hover,
+.team-soc-link:focus {
+  background-color: var(--accent-color);
+  color: var(--icon-secondary-color);
+  outline: none;
+}
+
+.team-soc-icon {
+  fill: currentColor;
+}
+
+/* CLIENTS */
+
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * var(--card-set-gap));
+}
+
+.clients-item {
+  flex-basis: calc(100% / 6 - var(--card-set-gap));
+  margin-left: var(--card-set-gap);
+  margin-top: var(--card-set-gap);
+}
+
+.clients-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  justify-content: center;
+  border: 1px solid var(--icon-primary-color);
+  border-radius: 4px;
+  color: var(--icon-primary-color);
+}
+
+.clients-icon {
+  fill: currentColor;
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border: 1px solid var(--accent-color);
+  color: var(--accent-color);
+  outline: none;
 }
 
 /* Footer */
@@ -321,12 +436,23 @@ img {
   padding-bottom: 60px;
 }
 
+.footer .container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-address {
+  margin-right: 70px;
+}
+
 .footer .logo {
   margin-bottom: 20px;
 }
+
 .footer .accent {
   color: var(--text-color-light);
 }
+
 .address {
 font-style: normal;
 line-height: 1.71;
@@ -335,18 +461,68 @@ line-height: 1.71;
 .address-item:not(:last-child) {
   margin-bottom: 9px;
 }
+
 .address-link {
   color:var(--text-color-light)
 }
+
 .address-link:hover,
 .address-link:focus,
 .contacts-link:hover,
 .contacts-link:focus {
-  color: var(--accent-color)
+  color: var(--accent-color);
+  outline: none;
 }
+
 .contacts-link {
-  color: rgba(255, 255, 255, 0.6);
+color: rgba(255, 255, 255, 0.6);
 }
+
+.joinus-title {
+  margin-bottom: 20px;
+
+  font-size: inherit;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color:var(--text-color-light);
+}
+
+.joinus-list {
+  display: flex;
+  justify-content: center;
+}
+
+.joinus-item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+}
+
+.joinus:last-child {
+  margin-right: 0;
+}
+
+.joinus-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);;
+  color: var(--icon-secondary-color);
+}
+
+.joinus-link:hover,
+.joinus-link:focus {
+  background-color: var(--accent-color);
+  outline: none;
+}
+
+.joinus-icon {
+  fill: currentColor;
+}
+
 
 
 /* Portfolio */
@@ -375,6 +551,12 @@ line-height: 1.71;
 .work-link {
   display: block;
   overflow: hidden;
+}
+
+.work-link:hover,
+.work-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  outline: none;
 }
 
 .work-item {
